Upgrade to Java 21; use Virtual Threads; JVM tuning